fix zoom on ios

--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,10 @@
   color: var(--color-text);
 }
 
+html {
+  touch-action: manipulation;
+}
+
 body {
   min-height: 100vh;
   margin: 0;
@@ -31,6 +35,7 @@ body {
       var(--color-bg-1) 15%,
       var(--color-bg-2) 50%
     );
+  -webkit-text-size-adjust: 100%;
 }
 
 h1,
